@@ -512,6 +512,10 @@ pipe-length=[font=default-semibold][color=#ffe6c0]Pipe length:[/color][/font] [f
 pipe-too-long=[color=red]Too long![/color]
 valve-flow-rate-label=Flow rate:
 valve-flow-rate-unit-and-max=[font=default-bold]__1__[/font] (max. [font=default-bold]__2____1__[/font])
+battery-flow-title=Energy flow rate:
+battery-flow-calculating=Calculating...
+battery-flow-charge=[font=default-semibold][color=#ffe6c0]Charge rate:[/color][/font] [font=default-bold]__1__ MW[/font]    [font=default-semibold][color=#ffe6c0]Time to full:[/color][/font] [font=default-bold]__2__:__3____4__:__5____6__[/font]
+battery-flow-discharge=[font=default-semibold][color=#ffe6c0]Drain rate:[/color][/font] [font=default-bold]__1__ MW[/font]    [font=default-semibold][color=#ffe6c0]Time to empty:[/color][/font] [font=default-bold]__2__:__3____4__:__5____6__[/font]
 radiation=Radiation levels:
 crash-site-title=Crash site
 crash-site-repairs-required=Repairs required:
