@@ -3,5 +3,6 @@ return {
 	require(modpath.."scripts.power.coal-generator"),
 	require(modpath.."scripts.power.fuel-generator"),
 	require(modpath.."scripts.power.nuclear-power-plant"),
-	require(modpath.."scripts.power.geothermal-generator")
+	require(modpath.."scripts.power.geothermal-generator"),
+	require(modpath.."scripts.power.power-storage")
 }
