@@ -240,5 +240,7 @@ Date: 2021.06.05
 ---------------------------------------------------------------------------------------------------
 Version: 0.6.4
 Date: 2021.06.11
+  Features:
+    - Added GUI to Power Storage
   Bugfixes:
     - Fix crash when trying to fast-transfer from a tree
